--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+pydantic<2.0
+fastapi==0.95.2
 python-dotenv==1.1.1
 streamlit==1.47.1
 PyPDF2==3.0.1
@@ -11,8 +13,6 @@ requests==2.32.4
 pandas==2.3.1
 typing_extensions==4.14.1
 sentence-transformers==5.1.0
-fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
 python-multipart==0.0.6
 groq==0.4.2
